# CogApp-LLM-Subjectivity

./: README.md  pyproject.toml
calibration/: data_analysis.ipynb  evaluate.py  llms.py  log.txt  run.py  run_exp.sbatch  run_exp1.sh  run_exp2.sh  standardize_data.py  utils.py
calibration/aggregators/: avg_conf.py  base_aggregator.py  pair_rank.py
calibration/hf_processed/: covidet_appraisals.json  covidet_test_repeated_hf_processed.json  covidet_test_unique_hf_processed.json  envent_appraisals.json  envent_test_unique_hf_processed.json  fge_appraisals.json  fge_test_repeated_hf_processed.json  len_stat.json
calibration/methods/: avg_conf.py  base_parser.py  consistency.py  pair_rank.py
calibration/prompts/: envent_questionnaire_reader.json  envent_questionnaire_writer.json  envent_sys_prompt_reader.yaml  envent_sys_prompt_with_demo.yaml  envent_sys_prompt_with_demo_traits.yaml  envent_sys_prompt_with_traits.yaml  envent_sys_prompt_writer_adv.yaml  event_prompt_methods.yaml  fge_questionnaire_reader.json  (+1 more)
data/: covidet_merged_dimensions.yaml  covidet_test_repeated_hf_processed_merged.json  envent_valid_unique_hf_processed.json  fge_merged_dimensions.yaml  fge_test_repeated_hf_processed_merged.json
label_smoothing/: data.py  eval_utils.py  evaluate.py  evaluate_formatted.py  get_distribution_mode.ipynb  label_smoother.py
label_smoothing_baseline/: dual_encoder.py  significance_test.py  train.py  utils.py  visualization.ipynb
llm/: README.md  baselines.py  data_analysis.ipynb  evaluate.py  exp.py  llm_significance_test.py  llms.py  utils.py
(+50 files in other folders)
